# simple-2d-game

./: .gitignore  CMakeLists.txt  README.md  clang-uml.yml
AppIcons/: PetriDish.icns
include/: cell.hpp  circle.hpp  circle_physics.hpp  creature_circle.hpp  drawable_circle.hpp  eatable_circle.hpp  eater_brain.hpp  eater_circle.hpp  game.hpp  simulation_config.hpp
include/game/: selection_manager.hpp  spawner.hpp
src/: cell.cpp  circle.cpp  circle_physics.cpp  creature_circle.cpp  drawable_circle.cpp  eatable_circle.cpp  eater_brain.cpp  eater_circle.cpp  game.cpp  main.cpp  ui.cpp
src/game/: selection_manager.cpp  spawner.cpp
